--- a/Assignment_2_Test/Assignment_2_Test.Rmd
+++ b/Assignment_2_Test/Assignment_2_Test.Rmd
@@ -1,1 +1,10 @@
 df <- read.csv('UniversalBank.csv')
+head(df)
+summary(df)
+mean(df$Age)
+
+```{r}
+df <- read.csv('UniversalBank.csv')
+head(df)
+df
+```
