--- a/Assignment_3/Assignment_3.tex
+++ b/Assignment_3/Assignment_3.tex
@@ -424,4 +424,54 @@ Age Experience Income Family CCAvg Mortgage Securities Account 1 0 95969
 49563 78 CD Account Education\_1 Education\_2 Education\_3 1 33 891 607
 619 2 144 381 248 254
 
+\hypertarget{compute-the-following-quantities-pa-b-means-the-probability-ofa-given-b-i.-pcc-1-loan-1-the-proportion-of-credit-card-holders-among-the-loan-acceptors-ii.-ponline-1-loan-1-iii.-ploan-1-the-proportion-of-loan-acceptors-iv.-pcc-1-loan-0-v.-ponline-1-loan-0-vi.-ploan-0}{%
+\subsubsection{Compute the following quantities {[}P(A \textbar{} B)
+means ``the probability ofA given B''{]}: i. P(CC = 1 \textbar{} Loan =
+1) (the proportion of credit card holders among the loan acceptors) ii.
+P(Online = 1 \textbar{} Loan = 1) iii. P(Loan = 1) (the proportion of
+loan acceptors) iv. P(CC = 1 \textbar{} Loan = 0) v. P(Online = 1
+\textbar{} Loan = 0) vi. P(Loan =
+0)}\label{compute-the-following-quantities-pa-b-means-the-probability-ofa-given-b-i.-pcc-1-loan-1-the-proportion-of-credit-card-holders-among-the-loan-acceptors-ii.-ponline-1-loan-1-iii.-ploan-1-the-proportion-of-loan-acceptors-iv.-pcc-1-loan-0-v.-ponline-1-loan-0-vi.-ploan-0}}
+
+\hypertarget{output-file-assignment_3.knit.md}{%
+\section{output file:
+Assignment\_3.knit.md}\label{output-file-assignment_3.knit.md}}
+
+\hypertarget{cprogram-filesrstudiobinpandocpandoc-rts--k512m--rts-assignment_3.knit.md-to-latex-from-markdownautolink_bare_uristex_math_single_backslash-output-assignment_3.tex-lua-filter-c-library4.1.lua-lua-filter-c-library4.1-div.lua-self-contained-highlight-style-tango-pdf-engine-pdflatex-variable-graphics-variable-geometrymargin1in}{%
+\section{\texorpdfstring{``C:/Program Files/RStudio/bin/pandoc/pandoc''
++RTS -K512m -RTS Assignment\_3.knit.md --to latex --from
+markdown+autolink\_bare\_uris+tex\_math\_single\_backslash --output
+Assignment\_3.tex --lua-filter
+``C:\Users\xlamo\Documents\R\win-library\textbackslash4.1\rmarkdown\rmarkdown\lua\pagebreak.lua''
+--lua-filter
+``C:\Users\xlamo\Documents\R\win-library\textbackslash4.1\rmarkdown\rmarkdown\lua\latex-div.lua''
+--self-contained --highlight-style tango --pdf-engine pdflatex
+--variable graphics --variable
+``geometry:margin=1in''}{``C:/Program Files/RStudio/bin/pandoc/pandoc'' +RTS -K512m -RTS Assignment\_3.knit.md --to latex --from markdown+autolink\_bare\_uris+tex\_math\_single\_backslash --output Assignment\_3.tex --lua-filter ``C:-library\textbackslash4.1.lua'' --lua-filter ``C:-library\textbackslash4.1-div.lua'' --self-contained --highlight-style tango --pdf-engine pdflatex --variable graphics --variable ``geometry:margin=1in''}}\label{cprogram-filesrstudiobinpandocpandoc-rts--k512m--rts-assignment_3.knit.md-to-latex-from-markdownautolink_bare_uristex_math_single_backslash-output-assignment_3.tex-lua-filter-c-library4.1.lua-lua-filter-c-library4.1-div.lua-self-contained-highlight-style-tango-pdf-engine-pdflatex-variable-graphics-variable-geometrymargin1in}}
+
+\hypertarget{double-subscript.}{%
+\section{! Double subscript.}\label{double-subscript.}}
+
+\hypertarget{l.364-ditcard-tableuniversalbank2_train_df_w_}{%
+\section{l.364 \ldots ditCard)
+table(UniversalBank2\_train\_df\_w\_}\label{l.364-ditcard-tableuniversalbank2_train_df_w_}}
+
+\begin{verbatim}
+                                              to_L\)Online) 
+\end{verbatim}
+
+\hypertarget{error-latex-failed-to-compile-assignment_3.tex.-see-httpsyihui.orgtinytexrdebugging-for-debugging-tips.-see-assignment_3.log-for-more-info.}{%
+\section{\texorpdfstring{Error: LaTeX failed to compile
+Assignment\_3.tex. See \url{https://yihui.org/tinytex/r/\#debugging} for
+debugging tips. See Assignment\_3.log for more
+info.}{Error: LaTeX failed to compile Assignment\_3.tex. See https://yihui.org/tinytex/r/\#debugging for debugging tips. See Assignment\_3.log for more info.}}\label{error-latex-failed-to-compile-assignment_3.tex.-see-httpsyihui.orgtinytexrdebugging-for-debugging-tips.-see-assignment_3.log-for-more-info.}}
+
+\hypertarget{execution-halted}{%
+\section{Execution halted}\label{execution-halted}}
+
+\hypertarget{this-was-the-same-problem-i-kept-having-with-assignment_2-everything-kept-failing-and-execution-halted---this-is-frustrating}{%
+\subparagraph{This was the same problem I kept having with Assignment\_2
+--- everything kept failing and Execution Halted - this is
+frustrating}\label{this-was-the-same-problem-i-kept-having-with-assignment_2-everything-kept-failing-and-execution-halted---this-is-frustrating}}
+
 \end{document}
