--- a/Assignment_3/Assignment_3.Rmd
+++ b/Assignment_3/Assignment_3.Rmd
@@ -39,7 +39,7 @@ library(caret)
 library(class)
 
 install.packages("lattice")
-
+library(lattice)
 UniversalBank <- read_csv("UniversalBank.csv")
 View(UniversalBank)
 
@@ -140,19 +140,19 @@ UniversalBank2_train_df_L_to_W
 ### I'm getting errors
 
 
-# Error: Can't subset columns that don't exist.
-# x Locations 4558, 5568, 5699, 3185, 3461, etc. don't exist.
-# i There are only 14 columns.
-# Run `rlang::last_error()` to see where the error occurred.
-# In addition: Warning message:
-# In xtfrm.data.frame(x) : cannot xtfrm data frames
-# > UniversalBank2_train_df_L_to_W
-# Error: object 'UniversalBank2_train_df_L_to_W' not found
-# > UniversalBank2_train_df_L_to_W = dcast(UniversalBank2_train_df_w_to_L, # UniversalBank2_train_df_w_to_L~variable,count) 
-# Error in `[.data.frame`(x, order(x, na.last = na.last, decreasing = decreasing)) : 
-#   undefined columns selected
-# In addition: Warning message:
-# In xtfrm.data.frame(x) : cannot xtfrm data frames
+#### Error: Can't subset columns that don't exist.
+#### x Locations 4558, 5568, 5699, 3185, 3461, etc. don't exist.
+#### i There are only 14 columns.
+#### Run `rlang::last_error()` to see where the error occurred.
+#### In addition: Warning message:
+#### In xtfrm.data.frame(x) : cannot xtfrm data frames
+#### > UniversalBank2_train_df_L_to_W
+#### Error: object 'UniversalBank2_train_df_L_to_W' not found
+#### > UniversalBank2_train_df_L_to_W = dcast(UniversalBank2_train_df_w_to_L, # ###UniversalBank2_train_df_w_to_L~variable,count) 
+#### Error in `[.data.frame`(x, order(x, na.last = na.last, decreasing = ###decreasing)) : 
+#####   undefined columns selected
+#### In addition: Warning message:
+#### In xtfrm.data.frame(x) : cannot xtfrm data frames
 
 
 ## There is something wrong with this - trying to figure it out
@@ -196,19 +196,19 @@ UniversalBank2_train_df_L_to_W
 #### something started working but count is giving me grief - I can do pivots in excel but R is just a pain
 
 
-# > UniversalBank2_train_df_L_to_W = dcast(UniversalBank2_train_df_w_to_L,Online~variable, count)
-# Error in UseMethod("count") : 
-#   no applicable method for 'count' applied to an object of class "c('double', 'numeric')"
-# > UniversalBank2_train_df_L_to_W
-#   Online   Age Experience Income Family   CCAvg Mortgage Securities Account CD Account
+### > UniversalBank2_train_df_L_to_W = ##dcast(UniversalBank2_train_df_w_to_L,Online~variable, count)
+### Error in UseMethod("count") : 
+###   no applicable method for 'count' applied to an object of class "c('double', ## ######### 'numeric')"
+### > UniversalBank2_train_df_L_to_W
+# ##  Online   Age Experience Income Family   CCAvg Mortgage Securities Account CD ##Account
 1      0 54339      24049  86744   2898 2312.20    64774                125         12
 2      1 81947      36568 133443   4299 3459.62   101085                184        165
 #  Education_1 Education_2 Education_3
 1         526         321         354
 2         746         534         519
-#> UniversalBank2_train_df_L_to_W = dcast(UniversalBank2_train_df_w_to_L,Online~variable, sum)
-#> UniversalBank2_train_df_L_to_W
-  Online   Age Experience Income Family   CCAvg Mortgage Securities Account CD Account
+#### > UniversalBank2_train_df_L_to_W = #### #####dcast(UniversalBank2_train_df_w_to_L,Online~variable, sum)
+##### > UniversalBank2_train_df_L_to_W
+####  Online   Age Experience Income Family   CCAvg Mortgage Securities Account CD Account
 1      0 54339      24049  86744   2898 2312.20    64774                125         12
 2      1 81947      36568 133443   4299 3459.62   101085                184        165
   Education_1 Education_2 Education_3
@@ -224,21 +224,6 @@ UniversalBank2_train_df_L_to_W
   CD Account Education_1 Education_2 Education_3
 1         33         891         607         619
 2        144         381         248         254
-
-
-### Compute the following quantities [P(A | B) means “the probability ofA given B”]: i. P(CC = 1 | Loan = 1) (the proportion of credit card holders among the loan acceptors) ii. P(Online = 1 | Loan = 1) iii. P(Loan = 1) (the proportion of loan acceptors) iv. P(CC = 1 | Loan = 0) v. P(Online = 1 | Loan = 0) vi. P(Loan = 0)
-
-# output file: Assignment_3.knit.md
-
-# "C:/Program Files/RStudio/bin/pandoc/pandoc" +RTS -K512m -RTS Assignment_3.knit.md --to latex --from markdown+autolink_bare_uris+tex_math_single_backslash --output Assignment_3.tex --lua-filter "C:\Users\xlamo\Documents\R\win-library\4.1\rmarkdown\rmarkdown\lua\pagebreak.lua" --lua-filter "C:\Users\xlamo\Documents\R\win-library\4.1\rmarkdown\rmarkdown\lua\latex-div.lua" --self-contained --highlight-style tango --pdf-engine pdflatex --variable graphics --variable "geometry:margin=1in" 
-# ! Double subscript.
-# l.364 ...ditCard) table(UniversalBank2_train_df_w_
-                                                  to_L\)Online) 
-
-# Error: LaTeX failed to compile Assignment_3.tex. See https://yihui.org/tinytex/r/#debugging for debugging tips. See Assignment_3.log for more info.
-# Execution halted
-
-##### This was the same problem I kept having with Assignment_2 --- everything kept failing and Execution Halted - this is frustrating
 
 
 
