Need naive-bayes

--- a/Assignment_3/Assignment_3.Rmd
+++ b/Assignment_3/Assignment_3.Rmd
@@ -310,5 +310,8 @@ library(ggplot2)
 install.packages("e1071")
 library(e1071)
 
+# I need to create objects x which holds the predictor variables and y which holds the response variables and use them to build a model but I'm stuck
+
+
 
 
